# izba-reader-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Makefile.docker  Makefile.run  Makefile.uvicorn  Procfile  README.md  docker-compose.dev.yml  docker-compose.yml  doppler.yaml  entrypoint.sh  pyproject.toml
.circleci/: config.yml
.github/workflows/: build.yml
browser/: Dockerfile  README.md  main.js  package-lock.json
izba_reader/: __init__.py  cache.py  config.py  constants.py  decorators.py  dependencies.py  enums.py  main.py  models.py  openapi.py  rollbar_handlers.py  routes.py  settings.py  tasks.py  timezones.py  utils.py  workers.py
izba_reader/services/: cache.py  documents.py  fetch.py  html.py  mail.py  parser.py  rss.py  send_mail.py  utils.py
izba_reader/templates/: iep.html
tests/: conftest.py  test_header_create.py  test_health.py  test_izba_reader.py  test_mail.py  test_mail_send.py  test_reports.py  test_rss_feeds.py  test_send_mail.py  test_upload_image.py  test_web_scrapers.py
tests/integration/: test_articles.py  test_feeds.py  test_news.py
