[tool.poetry]
name = "izba-reader"
version = "0.1.0"
description = ""
authors = ["Przemysław Kaliś <przemek.kalis@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.1"
aioredis = "^2.0.1"
beautifulsoup4 = "^4.10.0"
fastapi = "^0.75.0"
httpx = "^0.22.0"
numpy = "^1.22.3"
opencv-python = "^4.5.5"
pyppeteer = "^1.0.2"
python-multipart = "^0.0.5"
pytz = "^2021.3"
uvicorn = {extras = ["standard"], version = "^0.17.6"}

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
Faker = "^13.3.0"
isort = "^5.10.1"
pre-commit = "^2.17.0"
pytest = "^7.0.1"
pytest-mock = "^3.7.0"
trio = "^0.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
