[tool.poetry]
name = "izba-reader"
version = "0.2.1"
description = ""
authors = ["Przemysław Kaliś <przemek.kalis@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aioredis = "^2.0.1"
beautifulsoup4 = "^4.11.1"
fastapi = "^0.88.0"
gunicorn = "^20.1.0"
httpx = "^0.23.1"
lxml = "^4.9.2"
numpy = "^1.23.5"
opencv-python = "^4.6.0.66"
python-multipart = "^0.0.5"
pytz = "^2022.6"
rollbar = "^0.16.3"
uvicorn = "^0.20.0"
pydantic = {extras = ["email"], version = "^1.10.2"}
sentry-sdk = {extras = ["fastapi"], version = "^1.12.0"}

[tool.poetry.group.dev.dependencies]
asgi-lifespan = "^2.0.0"
black = "^22.12.0"
doppler-env = "^0.3.1"
faker = "^15.3.4"
flake8 = "^6.0.0"
isort = "^5.11.2"
pre-commit = "^2.20.0"
pytest = "^7.2.0"
pytest-asyncio = "^0.20.3"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
